--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "firebase": "^8.10.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
+    "graphql-tools": "^8.1.0",
+    "micro": "^9.3.4",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
