--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "apollo-server-micro": "^3.3.0",
     "firebase": "^8.10.0",
     "framer-motion": "^4.1.17",
@@ -22,7 +23,8 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
